# SPINE

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.codex/: config.toml
.github/workflows/: ci.yml
.spine/: artifact_manifest.json  constraints.yaml  decisions.jsonl  evidence.jsonl  mission.yaml
docs/: README.md  ROADMAP.md  SPINE_AGENT_SKILL.md  SPINE_BETA_BUG_AUDIT_REPORT.md  SPINE_BETA_EXIT_VALIDATION.md  SPINE_BETA_IMPLEMENTATION_REPORT.md  SPINE_BRANCH_CLEANUP_REPORT.md  SPINE_BRANCH_RULESET_BASELINE.md  SPINE_COMPETITIVE_INPUTS.md  SPINE_FEATURE_BACKLOG.md  SPINE_INTEGRATIONS.md  SPINE_INTERNAL_ROADMAP.md  SPINE_OFFICIAL_SPEC_v0.1.md  SPINE_PHASE3A_IMPLEMENTATION_REPORT.md  SPINE_PHASE3A_PLANNING_NORMALIZATION_REPORT.md  SPINE_PHASE3A_v0.2_SPEC.md  SPINE_POST_BETA_NORMALIZATION_REPORT.md  SPINE_POST_LAUNCH_STABILIZATION_REPORT.md  SPINE_PRODUCT_NOTES.md  SPINE_ROADMAP.md  SPINE_SECURITY_BASELINE.md  SPINE_SPEC.md  SPINE_STATUS.md  SPINE_TRACKING_POLICY.md  SPINE_v0.1.2_STABILIZATION_PLAN.md  SPINE_v0.1.2_STABILIZATION_REPORT.md  external-repo-onboarding.md  milestone-1.md
tests/: test_brief.py  test_check_before_pr.py  test_check_before_work.py  test_context_visibility.py  test_cwd_support.py  test_decision.py  test_decision_list.py  test_doctor.py  test_drafts.py  test_drift.py  test_evidence.py  test_evidence_list.py  test_fixture_contracts.py  test_hooks.py  test_init.py  test_log_cmd.py  test_mcp.py  test_mission.py  test_opportunity.py  test_review.py  test_review_handoff.py  test_write_flow_json.py
(+55 files in other folders)
